style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
body{
    font-family: "Inter", sans-serif;
}
.main{
    display: flex;
    justify-content: space-evenly;
    flex-direction: column;
    gap:70px;
}
.contact{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: #F5F5F5;    
}
.follow{
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    width: 258px;
    height:31px;
    align-items: center;
    justify-content: left;
    gap:5px;
    margin-left: 25px;
}
.phone{
    display: flex;
    justify-content: center;
    align-items: center;
    

}
.email{
    display: flex;
    justify-content: center;
    align-items: center;
    

}
.sub2{
    display: flex;
    justify-content: center;
    align-items: center;
    gap:20px;
    margin-right: 25px;
}
.sub2 img{
    margin-right: 10px;
}

.image{
    padding-left: 25px;
}

.options{
    display:flex;
    flex-direction: row;
    justify-content: space-evenly;
    gap:10px;
    padding-right: 25px;
    height: 28px;
    justify-content: center;
    align-items: center;
}
.navbar{
    justify-content: center;
    align-items: center;
    display:flex;
    flex-direction: row;
    justify-content: space-between;
}
.options p{
    font-size:12px;
    font-weight: bolder;
}
.dptmnt{
    font-size: 12px;
    font-weight: bolder;
    border:0px;
    outline:0px;
}

.doctor{
  background-image: url("./Assets/image\ 23.png");
  background-color: #F5F5F5; 
  height:494px;
  background-position: center; 
  background-repeat: no-repeat; 
  background-size: cover;
  margin-left:20px;
  margin-right: 20px;
}

.imgcontent{
    margin-top: 50px;
    margin-left: 100px;
    display: flex;
    flex-direction: column;

}
.imgcontent h4{
    font-size: 43px;
    margin-bottom: 0px;
    margin-top:50px;
}
.imgcontent p{
    font-size: 13px;
}
.button{
    height: 40px;
    width: 291px;
    display: flex;
    align-items: center;
    gap: 10px;

}

#customDateInput::-webkit-input-placeholder { /* Chrome/Opera/Safari */
    color: transparent;
}
#customDateInput::-moz-placeholder { /* Firefox 19+ */
    color: transparent;
}
#customDateInput:-ms-input-placeholder { /* IE 10+ */
    color: transparent;
}
#customDateInput:-moz-placeholder { /* Firefox 18- */
    color: transparent;
}

.button img{
    height: 21;
    width:21;
}
.vid-book{
    background-color:#17C1A3;
    color:#F5F5F5;
    border: 1px;;
    border-radius: 5px;
    width: 158px;
    height: 40px;
}
.vid-btn{
    border:0;
    border-radius: 5px;
    background-color: transparent;
    text-decoration: underline;
}
.form-ele{
    background-color:white;
    width:955px;
    height:190px;
    position: absolute;
    bottom: 1;
    border-radius: 5px;
    margin-top: 50px;
    margin-left: 200px;
    display: flex;
    flex-direction: column;

}
.book-form{
    flex-grow:1;
    padding:5px 20px;
    display: grid;
    gap: 10px;
    grid-template-columns: repeat(3,1fr);
}
.in{
    border-radius: 5px;
    border: black solid 1px;
}
.departments{
    margin-top: 100px;
    margin-left: 60px;
    display: flex;
    flex-direction: column;
    width: 1112px;
    height: 454px;
}
.dep-img{
    display:grid;
    grid-template-columns: repeat(3,1fr);
    gap:10px;

}
.whygg{
    display: flex;
    margin-left: 60px;
    background-color:#F0FBFF;
    width: 1114px;
    height: 513px;
}
.whygg img{
    padding-top: 18px;
    width: 715px;
    height: 493px;
}
.whyggtext{
    align-self: center;
    display: flex;
    flex-direction: column;
}
.whyggtext p{
    font-size: 24px;
    font-weight: bold;
}
.whyggtext ul{
    padding-left: 20px;
    list-style-image: url("./Assets/Group\ 120.png");   
}
.whyggtext li{
    font-size: 13px;
    margin-bottom: 30px;

}

.specialists{
    width: 1114px;
    height: 513px;
    margin-left: 60px;
    display: flex;
    flex-direction: column;
    align-items: center;

}
.specimgset{
    width: 1114px;
    height: 513px;
    display: flex;
    justify-content: space-evenly;
}
.specimg{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.specimg img{
    height: 305px;
    width: 253px;
}
.docname{
    font-size: 20px;
    font-weight: bold;
    margin-bottom: 0px;
}
.facilities{
    width: 1114px;
    height: 350px;
    margin-left: 60px;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.facimg{
    width: 1114px;
    height: 350px;
    display: flex;
    justify-content: space-evenly;
}
.facimg img{
    width: 352px;
    height:227px;
}
.maybe{
    position: absolute;
    margin-bottom: 500px;
    top: -160px;
    margin-left: 60px;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.masimg{
    width: 1114px;
    height: 513px;
    display: flex;
    justify-content: space-evenly;

}
.imgmay img{
    width: 350px;
    height: 205px;
}
.combined-absolute{
    display: flex;
    flex-direction: column;
    position: relative;
    margin-top: 200px;
    height:639.33px;
    width: 1263px;
    background-color: #EAF2FF;
}
.newsletter{
    align-self: center;
    align-items: center;
    justify-content: center;
    margin-top: 350px;
    width: 1104px;
    height: 215px;
    background-image: url("./Assets/Mask\ group\ \(5\).png");
    background-color: #FFF;
}
.nwl-text{
    font-size: 20px;
    font-weight: bold;
    display: flex;
    justify-content: space-between;
    align-self: center;
    margin-top: 50px;
    margin:50px
}
.input-container {
    width: 384px;
    height: 42px;
    border-bottom: 1px black solid;
    display: inline-flex; /* Aligns items horizontally */
    align-items: center; /* Vertically aligns items in the middle */
    padding: 3px;
    background-color: #fff; /* Light grey background */
  }
  
.input-container  input[type="text"] {
    height: 42px;
    border:none;
    flex-grow: 1; 
    margin-right: 10px;
  }
  
.inside-button {
    border:none;
    background-color:#17C1A3;
    color:#F5F5F5;
    width: 102px;
    height:40px;
    padding: 5px 10px; /* Adds some padding to the button */
    cursor: pointer; /* Changes the cursor to indicate it's clickable */
  }
  .footer{
    display: flex;
    flex-direction: column;
    height: 389px;
    width: 1247px;
    justify-content: center;
    align-items: center;
  }
  .addrandother{
    padding-top: 100px;
    width: 954px;
    height: 150px;
    border-bottom: 1px solid gray;
    display: flex;
    justify-content: space-between;
  }
  .addr img{
    width: 190px;
    height: 50px;
  }
  .div4{
    display: grid;
    grid-template-columns: repeat(2,1fr);
    gap:10px;
  }
  .div4 p{
    font-size: 9px;
  }
  .gglegal{
    display: flex;
    gap:100px;

  }
  .addrclasssocial{
    display: flex;
    width: 954px;
    justify-content: space-between;

  }
  .imageset{
    display: flex;
    justify-content: space-between;
  }
  .ic{
    display: flex;
    align-items: center;
    gap: 4px;
  }
  .ic img{
    height: 14px;
    width: 15px;
  }
  .social{
    display: flex;
    flex-direction: column;
    align-self: flex-end;
    padding-left: 100px;

    align-self: self-end;
  }
.inline-content {
    display: flex;
    flex-direction: column;
}

.inline-content p,
.inline-content a p {
    margin: 3px; /* Removes default margins around <p> elements */
}
.sideline{
    width: 1000px;
    display: flex;
    flex-direction: row;
    align-items: center;
}
.sideline img{
    width: 99px;
    height:9px;
    justify-content: flex-end;
    
}

  

